// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`runtime option help > snapshots experiment help 1`] = `
"Poe - experiment run

Usage: poe-code experiment run [options] [docs...]

Run an experiment doc through the autonomous experiment loop.

Arguments:
  docs                   Experiment doc paths to run sequentially

Options:
  --agent <agent>        Override the agent from frontmatter
  --max-experiments <n>  Limit the number of experiments to run
  --tui                  Show a live dashboard while the experiment is running
  --no-tui               Disable the live dashboard for this experiment run
  --worktree             Run in a managed git worktree and reconcile successful
                         output.
  --runtime <runtime>    Override runtime backend: host | docker (choices:
                         "host", "docker")
  --runtime-image <ref>  Override Docker runtime image
  --detach               Run as a detached runtime job
  --runner-sync <mode>   Override runner workspace sync: both | upload | none
                         (choices: "both", "upload", "none")
  -h, --help             Display help for command
"
`;

exports[`runtime option help > snapshots ralph help 1`] = `
"Poe - ralph run

Usage: poe-code ralph run [options] [docs...]

Run the selected markdown doc through repeated agent iterations.

Arguments:
  docs                   Markdown doc paths to run sequentially

Options:
  --agent <name>         Override the agent from frontmatter
  --iterations <n>       Override iterations from frontmatter
  -C, --cwd <path>       Working directory for the Ralph agent loop
  --archive              Archive the doc after successful completion
  --no-archive           Leave the completed doc in place
  --tui                  Show a live dashboard while Ralph is running
  --no-tui               Disable the live dashboard for this Ralph run
  --worktree             Run in a managed git worktree and reconcile successful
                         output.
  --runtime <runtime>    Override runtime backend: host | docker (choices:
                         "host", "docker")
  --runtime-image <ref>  Override Docker runtime image
  --detach               Run as a detached runtime job
  --runner-sync <mode>   Override runner workspace sync: both | upload | none
                         (choices: "both", "upload", "none")
  -h, --help             Display help for command
"
`;

exports[`runtime option help > snapshots spawn help 1`] = `
"Poe - spawn

Usage: poe-code spawn [options] <agent> [prompt] [agentArgs...]

Run a single prompt through an agent CLI.

Arguments:
  agent                        Agent to spawn (claude-code | claude | codex |
                               cursor | cursor-agent | gemini-cli | gemini |
                               goose | kimi | kimi-cli | opencode | pi |
                               pi-agent | poe-agent)
  prompt                       Prompt text to send, '@path/to/file' to load from
                               a file, or '-' / stdin
  agentArgs                    Additional arguments forwarded to the agent CLI

Options:
  --model <model>              Model identifier override passed to the agent CLI
  -C, --cwd <path>             Working directory or workspace locator for the
                               agent CLI
  --stdin                      Read the prompt from stdin
  -i, --interactive            Launch the agent in interactive TUI mode
  --mode <mode>                Permission mode: yolo | auto | edit | read
                               (prompted; --yes uses yolo)
  --resume-thread-id <id>      Resume a prior provider thread/session
  --mcp-servers <json|@file>   MCP server config JSON (or @path/to/file.json):
                               {name: {command, args?, env?}}
  --skill <ref>                Active skill reference to bridge for this run
  --skills [refs]              Comma-separated active skill references to bridge
                               for this run
  --hooks-from <agentId>       Agent hook configuration to bridge for this run
  --hooks-strategy <strategy>  Hook bridge strategy (default: auto) (choices:
                               "auto", "symlink", "transform")
  --hooks-scope <scope>        Hook bridge scope (default: merged) (choices:
                               "project", "user", "merged")
  --log-dir <path>             Directory override for ACP JSONL spawn logs
  --log-file-name <name>       Filename override for the spawn log
  --log-content                Include message and tool content in ACP JSONL
                               spawn logs
  --capture-otel               Capture native OpenTelemetry emitted by the
                               spawned agent
  --capture-otel-content       Include prompt and tool content in native
                               OpenTelemetry
  --activity-timeout-ms <ms>   Kill the agent after N ms of inactivity
  --runtime <runtime>          Override runtime backend: host | docker (choices:
                               "host", "docker")
  --runtime-image <ref>        Override Docker runtime image
  --detach                     Run as a detached runtime job
  --runner-sync <mode>         Override runner workspace sync: both | upload |
                               none (choices: "both", "upload", "none")
  -h, --help                   Display help for command
"
`;

exports[`runtime option help > snapshots superintendent help 1`] = `
"Poe - poe-code superintendent run — Run the full superintendent loop.

Usage: poe-code superintendent run [OPTIONS] [docs...]

OPTIONS
  [docs...]                 Paths to superintendent markdown documents to run sequentially
  --doc <value>             Path to the superintendent markdown document
  --agent <value>           Override the builder agent for this run. Precedence: --agent > plan
                            frontmatter builder.agent.
  --runtime <value>         Override runtime backend: host or docker (values: host, docker)
  --runtime-image <value>   Override Docker runtime image
  --detach                  Run as a detached runtime job
  --runner-sync <value>     Override runner workspace sync: both, upload, or none (values: both,
                            upload, none)
  --tui                     Show a live dashboard while Superintendent is running
  --worktree                Run in a managed git worktree and reconcile successful output

Options: -v, --verbose
"
`;
